<resources>
    <string name="app_name">Login</string>
    <string name="action_sign_in_short">회원가입</string>
    <string name="email">이메일</string>
    <string name="minimum_password">비밀번호는 6자리 이상으로 해주세요.</string>
    <string name="auth_failed">이메일이나 비밀번호를 확인해주세요.</string>
    <string name="change_email">이메일 변경</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="send_password_reset_email">이메일로 비밀번호 전송</string>
    <string name="remove_user">유저 삭제</string>
    <string name="new_pass">새 비밀번호</string>
    <string name="title_activity_profile">한성</string>
    <string name="title_activity_login">로그인</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_name">이름</string>
    <string name="btn_login">로그인</string>
    <string name="btn_link_to_register">멤버가 아니신가요? 회원가입 하세요!</string>
    <string name="btn_link_to_login">이미 회원이신가요? 로그인하세요!</string>
    <string name="title_activity_reset_password">비밀번호 재설정</string>
    <string name="btn_forgot_password">비밀번호가 기억나지 않으세요?</string>
    <string name="btn_reset_password">비밀번호 재설정</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">새 이메일</string>
    <string name="btn_change">변경</string>
    <string name="btn_send">전송</string>
    <string name="btn_remove">제거</string>
    <string name="btn_sign_out">로그아웃</string>
    <string name="lbl_forgot_password">비밀번호를 잊으셨나요??</string>
    <string name="forgot_password_msg">이메일로 새 비밀번호를 보내드릴게요.</string>
    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>
    <string name="facebook_app_id">280231789643011</string>
    <string name="fb_login_protocol_scheme">fb280231789643011</string>



</resources>
